--- a/manifest.yml
+++ b/manifest.yml
@@ -1,9 +1,9 @@
 ---
 applications:
-- name: personality-insights-livedemo
+- name: WPIdemo2018art
   command: npm start
   path: .
   memory: 256M
   instances: 1
   services:
-  - pi-service-demo-korean
+  - Personality Insights-aq
